--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goobs-testing",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A robust testing toolkit for JavaScript and TypeScript projects, offering custom assertions, advanced mocking utilities, performance profiling, benchmarking tools, flexible logging options, and seamless integration with Jest and Husky for enhanced test-driven development workflows.",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -70,6 +70,7 @@
     "url": "https://github.com/goobz22/goobs-testing"
   },
   "dependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "winston": "^3.14.1"
   }
 }
